add nav links for login, logout and signup

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,7 +8,12 @@
 </head>
 <body>
   <div class="nav-bar">
-    
+    <a href="/login">Login</a>
+    <a href="/logout">Logout</a>
+    <a href="/signup">Signup</a>
   </div>
+
+  <%= yield %>
+  
 </body>
 </html>
