--- a/app/views/books/edit.erb
+++ b/app/views/books/edit.erb
@@ -1,1 +1,14 @@
 <h1>Let's make some changes to <%= @book.title %>.</h1>
+
+<form class="" action="/books/<%= @book.id %>" method="post">
+  <input type="hidden" name="_method" value="patch">
+  <label for="title">Title: </label>
+  <input type="text" name="title" value="<%= @book.title %>">
+  <br>
+  <br>
+  <label for="author">Author: </label>
+  <input type="text" name="author" value="<%= @book.author %>">
+  <br>
+  <br>
+  <input type="submit" value="Edit Book">
+</form>
