create links to each book show page from index page

--- a/app/views/books/index.erb
+++ b/app/views/books/index.erb
@@ -2,6 +2,6 @@
 
 <ol>
   <% @user.books.each do |book| %>
-    <li><%= book.title %></li>
+    <li><a href="/books/<%= book.id %>"><%= book.title %></a></li>
   <% end %>
 </ol>
