--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -1,6 +1,9 @@
 <h1><%= @book.title %></h1>
 <h2>By: <%= @book.author %></h2>
 
+<a href="/books/<%= @book.id %>/edit">Edit Book</a>
+<br>
+<br>
 <form class="" action="/books/<%= @book.id %>" method="post">
   <input type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Book">
