add code so that new book form page greets each current user

--- a/app/views/books/new.erb
+++ b/app/views/books/new.erb
@@ -1,4 +1,4 @@
-<h1>Hi Tommy. Let's add a book to your list.</h1>
+<h1>Hi <%= @user.name %>. Let's add a book to your list.</h1>
 
 <form class="" action="/books" method="post">
   <label for="title">Title: </label>
