add content to public welcome page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,10 @@
-welcome
+<h1>Welcome to the Reading List</h1>
+
+<p>Here you can create and store your own reading list where you can: </p>
+
+<ul>
+  <li>add new books to your list</li>
+  <li>edit your books</li>
+  <li>view books on your list</li>
+  <li>delete books from your list</li>
+</ul>
