add link for public welcome page to nav bar to be viewed only by logged out users

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,6 +9,7 @@
 <body>
   <div class="nav-bar">
     <% if !logged_in? %>
+      <a href="/">Home</a>
       <a href="/login">Login</a>
       <a href="/signup">Signup</a>
     <% end %>
