add link to next book on list on user show page

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -4,4 +4,4 @@
 
 <h2>Next on your list:</h2>
 
-<%= @user.next_on_list %>
+<a href="/books/<%= @user.next_book_id %>"><%= @user.next_on_list %></a>
