--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,6 +2,11 @@
 
 <p><%= @user.book_list_stats %></p>
 
-<h2>Next on your list:</h2>
+<% if @user.number_of_books != 0 %>
+  <h2>Next on your list:</h2>
 
-<a href="/books/<%= @user.next_book_id %>"><%= @user.next_on_list %></a>
+
+  <a href="/books/<%= @user.next_book_id %>"><%= @user.next_on_list %></a>
+<% else %>
+  <p>Add a book <a href="/books/new">here.</a></p>
+<% end %>
