add code to layout to show flash[:message] if one exists

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,7 +21,13 @@
     <% end %>
   </div>
 
+  <% if flash[:message] %>
+    <%= flash[:message] %>
+  <% end %>
+
   <%= yield %>
+
+
 
 </body>
 </html>
