wrap flash[:message] in a <p> tag

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,7 +22,7 @@
   </div>
 
   <% if flash[:message] %>
-    <%= flash[:message] %>
+    <p><%= flash[:message] %></p>
   <% end %>
 
   <%= yield %>
