add wrapper div and flash-message div to layout

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,27 +7,30 @@
   <title>Reading List</title>
 </head>
 <body>
-  <div class="nav-bar">
-    <% if !logged_in? %>
-      <a href="/">Home</a>
-      <a href="/login">Login</a>
-      <a href="/signup">Signup</a>
-    <% end %>
-    <% if logged_in? %>
-      <a href="/users/<%= @user.id %>">Home</a>
-      <a href="/books/new">Add New Book</a>
-      <a href="/books">View Reading List</a>
-      <a href="/logout">Logout</a>
-    <% end %>
+    <div id="wrapper">
+
+      <div class="nav-bar">
+        <% if !logged_in? %>
+          <a href="/">Home</a>
+          <a href="/login">Login</a>
+          <a href="/signup">Signup</a>
+        <% end %>
+        <% if logged_in? %>
+          <a href="/users/<%= @user.id %>">Home</a>
+          <a href="/books/new">Add New Book</a>
+          <a href="/books">View Reading List</a>
+          <a href="/logout">Logout</a>
+        <% end %>
+      </div>
+
+      <div class="flash-message">
+        <% if flash[:message] %>
+          <p><%= flash[:message] %></p>
+        <% end %>
+      </div>
+
+      <%= yield %>
+
   </div>
-
-  <% if flash[:message] %>
-    <p><%= flash[:message] %></p>
-  <% end %>
-
-  <%= yield %>
-
-
-
 </body>
 </html>
