--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,12 +1,14 @@
 <h1>Hi <%= @user.name  %></h1>
 
-<p><%= @user.book_list_stats %></p>
+<div class="book_list_stats">
+  <p><%= @user.book_list_stats %></p>
+</div>
 
-<% if @user.number_of_books != 0 %>
-  <h2>Next on your list:</h2>
-
-
-  <a href="/books/<%= @user.next_book_id %>"><%= @user.next_on_list %></a>
-<% else %>
-  <p>Add a book <a href="/books/new">here.</a></p>
-<% end %>
+<div class="next_on_list">
+  <% if @user.number_of_books != 0 %>
+    <h2>Next on your list:</h2>
+    <a href="/books/<%= @user.next_book_id %>"><%= @user.next_on_list %></a>
+  <% else %>
+    <p>Add a book <a href="/books/new">here.</a></p>
+  <% end %>
+</div>
