--- a/app/views/books/index.erb
+++ b/app/views/books/index.erb
@@ -1,7 +1,9 @@
 <h1><%= @user.name %>'s Reading List</h1>
 
-<ol>
-  <% @user.books.each do |book| %>
-    <li><a href="/books/<%= book.id %>"><%= book.title %></a></li>
-  <% end %>
-</ol>
+<div class="reading-list">
+  <ol>
+    <% @user.books.each do |book| %>
+      <li><a href="/books/<%= book.id %>"><%= book.title %></a></li>
+    <% end %>
+  </ol>
+</div>
