change .nav-bar padding to 25px, float .nav-links right, add 5px padding to .nav-links a

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,14 @@ html, body {
 }
 
 .nav-bar {
-  padding: 10px;
+  padding-bottom: 25px;
   border-bottom: 1px solid #bdbdbd;
+}
+
+.nav-links {
+  float: right;
+}
+
+.nav-links a {
+  padding: 5px;
 }
