--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,3 +35,18 @@ a:hover {
   text-decoration: underline;
   font-weight: bold;
 }
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-top: 1px solid #bdbdbd;
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.copyright {
+  float: right;
+  padding: 5px;
+}
