add div for welcome page content, wrap message in div with id='message', and wrap list in div with id='bullets'

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,10 +1,16 @@
-<h1>Welcome to the Reading List</h1>
+<div class="welcome-page-content">
+  <h1>Welcome to the Reading List</h1>
 
-<p>Here you can create and store your own reading list where you can: </p>
+  <div id="message">
+    <h3>Here you can create and store your own reading list where you can: </h3>
+  </div>
 
-<ul>
-  <li>add new books to your list</li>
-  <li>edit your books</li>
-  <li>view books on your list</li>
-  <li>delete books from your list</li>
-</ul>
+  <div id="bullets">
+    <ul>
+      <li>add new books to your list</li>
+      <li>edit your books</li>
+      <li>view books on your list</li>
+      <li>delete books from your list</li>
+    </ul>
+  </div>
+</div>
