center text for welcome-page-content #message and add margin left 25% to welcome-page-content #bullets

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -54,3 +54,11 @@ a:hover {
 h1 {
   text-align: center;
 }
+
+.welcome-page-content #message {
+  text-align: center;
+}
+
+.welcome-page-content #bullets {
+  margin-left: 25%;
+}
