--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <div class="welcome-page-content">
-  <h1>Welcome to the Reading List</h1>
+  <h1 id="welcome">Welcome to the Reading List</h1>
 
   <div id="message">
     <h3>Here you can create and store your own reading list where you can: </h3>
