add 5% margin to top of welcome-page-content

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,6 +55,10 @@ h1 {
   text-align: center;
 }
 
+.welcome-page-content {
+  margin-top: 5%;
+}
+
 .welcome-page-content #message {
   text-align: center;
 }
