--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,6 +67,11 @@ h1 {
   margin-left: 25%;
 }
 
+.welcome-page-content #bullets li {
+  padding: 5px;
+  font-size: 18px;
+}
+
 #welcome {
   text-decoration: underline;
 }
