--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -72,6 +72,11 @@ h1 {
   font-size: 18px;
 }
 
+.welcome-page-content #message h3 {
+  margin-bottom: 20px;
+  margin-top: 30px;
+}
+
 #welcome {
   text-decoration: underline;
 }
