add id=user-name to h1 tag

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,5 @@
 <div class="user-home-page">
-  <h1>Hi <%= @user.name  %></h1>
+  <h1 id="user-name">Hi <%= @user.name  %></h1>
 
   <div class="book_list_stats">
     <p><%= @user.book_list_stats %></p>
