add 5% margin to top of user home page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -94,6 +94,10 @@ h1 {
   margin-left: 40%;
 }
 
+.user-home-page {
+  margin-top: 5%;
+}
+
 a:hover {
   text-decoration: underline;
   font-weight: bold;
