--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,6 +98,11 @@ h1 {
   margin-top: 5%;
 }
 
+#user-name {
+  text-decoration: underline;
+  font-size: 2.5em;
+}
+
 a:hover {
   text-decoration: underline;
   font-weight: bold;
