--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -103,6 +103,11 @@ h1 {
   font-size: 2.5em;
 }
 
+.book_list_stats {
+  text-align: center;
+  padding-bottom: 7px;
+}
+
 a:hover {
   text-decoration: underline;
   font-weight: bold;
