--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -112,6 +112,12 @@ h1 {
   text-align: center;
 }
 
+.next_on_list a {
+  text-decoration: none;
+  color: black;
+  font-size: 25px;
+}
+
 a:hover {
   text-decoration: underline;
   font-weight: bold;
