--- a/app/views/books/new.erb
+++ b/app/views/books/new.erb
@@ -1,13 +1,15 @@
-<h1>Hi <%= @user.name %>. Let's add a book to your list.</h1>
+<div class="new-book-page">
+  <h1>Hi <%= @user.name %>. Let's add a book to your list.</h1>
 
-<form class="" action="/books" method="post">
-  <label for="title">Title: </label>
-  <input type="text" name="title">
-  <br>
-  <br>
-  <label for="author">Author: </label>
-  <input type="text" name="author">
-  <br>
-  <br>
-  <input type="submit" value="Add Book">
-</form>
+  <form class="new-book-form" action="/books" method="post">
+    <label for="title">Title: </label>
+    <input type="text" name="title">
+    <br>
+    <br>
+    <label for="author">Author: </label>
+    <input type="text" name="author">
+    <br>
+    <br>
+    <input type="submit" value="Add Book">
+  </form>
+</div>
