add 5% margin to top of new book page, 50px margin to top of form and 40% margin on left

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -120,3 +120,12 @@ a:hover {
   text-decoration: underline;
   font-weight: bold;
 }
+
+.new-book-page {
+  margin-top: 5%;
+}
+
+.new-book-form {
+  margin-top: 50px;
+  margin-left: 40%;
+}
