--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -2,10 +2,13 @@
   <h1><%= @book.title %></h1>
   <h2>By: <%= @book.author %></h2>
 
-  <p>Click here to <a href="/books/<%= @book.id %>/edit">Edit Book</a><p>
-  <br>
-  <form class="" action="/books/<%= @book.id %>" method="post">
-    <input type="hidden" name="_method" value="delete">
-    <input type="submit" value="Delete Book">
-  </form>
+  <div class="book-page-buttons">
+    <p>Click here to <a href="/books/<%= @book.id %>/edit">Edit Book</a><p>
+    <br>
+    <form class="" action="/books/<%= @book.id %>" method="post">
+      <input type="hidden" name="_method" value="delete">
+      <input type="submit" value="Delete Book">
+    </form>
+  </div>
+
 </div>
