--- a/app/views/books/edit.erb
+++ b/app/views/books/edit.erb
@@ -14,5 +14,5 @@
     <input type="submit" value="Edit Book">
   </form>
   <br>
-  <a href="/books/<%= @book.id %>">Back to book page</a>
+  <p>Head back to <a href="/books/<%= @book.id %>">book page</a></p>
 </div>
