add 5% margin to top of logout page and center logout button

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -184,3 +184,11 @@ a:hover {
 .book-edit-page a {
   color: black;
 }
+
+.logout-page {
+  margin-top: 5%;
+}
+
+.logout-button {
+  text-align: center;
+}
