change 'add a book here' link text to 'let's add one.'

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -10,7 +10,7 @@
       <h2>Next on your list:</h2>
       <a href="/books/<%= @user.next_book_id %>"><%= @user.next_on_list %></a>
     <% else %>
-      <p>Add a book <a href="/books/new">here.</a></p>
+      <p><a href="/books/new">Let's add one.</a></p>
     <% end %>
   </div>
 </div>
