make welcome message on welcome page more concise

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -2,7 +2,7 @@
   <h1 id="welcome">Welcome to the Reading List</h1>
 
   <div id="message">
-    <h3>Here you can create and store your own reading list where you can: </h3>
+    <h3>Here at the Reading List you can: </h3>
   </div>
 
   <div id="bullets">
