add class 'button' to submit button

--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -7,7 +7,7 @@
     <br>
     <form class="" action="/books/<%= @book.id %>" method="post">
       <input type="hidden" name="_method" value="delete">
-      <input type="submit" value="Delete Book">
+      <input type="submit" class="button" value="Delete Book">
     </form>
   </div>
 </div>
