wrap 'what would you like to read' message in span

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,6 @@
 <div class="user-home-page">
-  <h1 id="user-name">Hi <%= @user.name  %></h1>
+  <h1 id="user-name">Hi <%= @user.name %>.</h1>
+  <h1><span>What would you like to read today?</span></h1>
 
   <div class="book_list_stats">
     <p><%= @user.book_list_stats %></p>
