--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,7 +28,9 @@ html, body {
 .logo a {
   text-decoration: none;
   font-style: oblique;
-  color: #3f3f3f;
+  color: #cc0000;
+  font-weight: bolder;
+  font-size: 1.35em;
 }
 
 .footer {
