center h2 text on reading list page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -143,6 +143,10 @@ a:hover {
   text-decoration: underline;
 }
 
+.reading-list-page h2 {
+  text-align: center;
+}
+
 .reading-list {
   margin-left: 40%;
   max-height: 450px;
